@@ -1,0 +1,3 @@
+.. automodule:: MDAnalysis.analysis.dielectric
+   :members:
+
