@@ -119,6 +119,7 @@ Volumetric analysis
    analysis/density
    analysis/lineardensity
    analysis/waterdynamics
+   analysis/dielectric
 
 Dimensionality Reduction
 ========================
